# spherical-sfm

./: CMakeLists.txt  LICENSE  README.md
docker/: Dockerfile
evaluation/: CMakeLists.txt  five_point_estimator.cpp  five_point_estimator.h  make_noise_plots.py  run_noise_experiment.py  solver_relpose_5p.cpp  solver_relpose_5p.h  solver_stewenius.cpp  stewenius_estimator.cpp  stewenius_estimator.h  test_random_problems.cpp  test_ransac.cpp  vanilla_ransac.h
evaluation/five_point/: CMakeLists.txt  five_point_estimator.cpp  five_point_estimator.h  nister_estimator.cpp  nister_estimator.h  opengv_estimator.cpp  opengv_estimator.h  solver_stewenius.h
evaluation/problem_generator/: CMakeLists.txt  problem_generator.cpp  problem_generator.h  random.h
evaluation/scripts/: make_noise_plots.py  make_ransac_plots.py  run_noise_experiment.py  run_ransac_experiment.py  run_stability_experiment.py  run_timings_experiment.py
examples/: CMakeLists.txt  colmap.cpp  colmap.h  feature_tracking.cpp  feature_tracking.h  make_circle_views.cpp  make_stereo_panorama.cpp  recenter_poses.cpp  run_spherical_sfm.cpp  run_spherical_sfm_uncalib.cpp  six_point_estimator.cpp  six_point_estimator.h  spherical_sfm_io.cpp  spherical_sfm_io.h  spherical_sfm_tools.cpp  spherical_sfm_tools.h  stereo_panorama_tools.cpp  stereo_panorama_tools.h  test_loop_closure.cpp  test_similarity.cpp  test_spherical_relpose.cpp  undistort_images.cpp
include/sphericalsfm/: estimator.h  msac.h  plane_estimator.h  pose_estimator.h  preemptive_ransac.h  ray.h  rotation_averaging.h  sfm.h  sfm_types.h  similarity_estimator.h  so3.h  sparse.hpp  spherical_estimator.h  spherical_fast_estimator.h  spherical_solvers.h  spherical_utils.h  triangulation_estimator.h  uncalibrated_pose_graph.h
pages/iccv2025/: index.html
scripts/: colmap_utils.py  evaluate_sfm_relative.py  make_angle_error_plot.py  sphericalsfm2json.py
src/: plane_estimator.cpp  pose_estimator.cpp  rotation_averaging.cpp  sfm.cpp  sfm_types.cpp  similarity_estimator.cpp  so3.cpp  spherical_estimator.cpp  spherical_fast_estimator.cpp  spherical_solvers.cpp  spherical_utils.cpp  triangulation_estimator.cpp  uncalibrated_pose_graph.cpp  util.cpp
webviewer/: index.html
webviewer/js/: webxr-sample-app.js
